# ReelsAutomation

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  USER_GUIDE.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 002_seed_permissions.py  003_add_rss_feeds.py  004_seed_rss.py  005_add_channel_rss_scheduling.py  006_fix_rss_feed_urls.py  007_add_pipeline_runs.py  008_seed_eonline_rss.py  edb492ee76fb_initial_schema.py
scripts/: add_permissions.py  smoke_test.py  start.sh
src/: main.py
src/api/: deps.py  routers.py
src/core/: async_run.py  auth_handler.py  base_crud.py  base_exception.py  celery_app.py  config.py  database.py  deps.py  enums.py  exception_handling_route.py  http_client.py  instagram_config.py  permission.py  rate_limiter.py  unit_of_work.py
src/cruds/: auth.py  channel.py  pipeline_run.py  rss.py  video.py
src/domain/: platform.py  scheduling.py
src/integrations/: money_printer_turbo.py  ntfy.py  (+2 more)
tests/: conftest.py  platform_credentials_fixtures.py  test_auth.py  test_celery.py  test_celery_beat.py  test_channel_digest.py  test_channels.py  test_e2e_flow.py  test_instagram_integration.py  test_integration_wiring.py  test_llm_manager.py  test_money_printer_turbo.py  test_ntfy.py  test_ownership.py  test_permissions.py  test_pipeline_contract.py  test_pipeline_runner.py  test_pipeline_runs.py  test_pipeline_tasks.py  test_platforms.py  test_retries.py  test_rss.py  test_rss_scheduling.py  test_tiktok_integration.py  test_videos.py  test_youtube_integration.py
(+102 files in other folders)
