[project]
name = "reelsautomation"
version = "0.1.0"
description = "Short-form video automation backend for Reels, Shorts, and TikTok"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.31.0",
    "bcrypt>=4.2.0",
    "celery>=5.6.3",
    "email-validator>=2.2.0",
    "feedparser>=6.0.11",
    "fastapi>=0.136.3",
    "fastapi-limiter>=0.2.0",
    "greenlet>=3.2.0",
    "httpx[http2]>=0.28.1",
    "langchain-core>=1.4.8",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "litellm>=1.89.3",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.20",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
    "autoflake>=2.3.3",
    "isort>=8.0.1",
    "black>=26.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["."]
